--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.14.1",
     "prismic-javascript": "^2.1.1",
     "prismic-reactjs": "^1.1.2",
     "qs": "^6.9.1",
