--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-prismic": "^1.0.8",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "node-sass": "^4.14.1",
     "prismic-javascript": "^2.1.1",
     "prismic-reactjs": "^1.1.2",
@@ -11,11 +16,15 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-load-script": "0.0.6",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "react-scripts": "^3.2.0"
+    "js-cookie": "^2.2.1",
+    "react-redux": "^7.2.2",
+    "react-scripts": "^3.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
